[PureXbase] fixed some issues with the autoedit interpreter